objects/ASI_CRM_KA_Event__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_ID__c</fullName>
        <displayFormat>KAE-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_In_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KA Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>English Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KA Events</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_KA_Event</fullName>
        <active>true</active>
        <label>CN KA Event</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>